--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,5 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
 HTML5/ filter=lfs diff=lfs merge=lfs -text
-.uproject filter=lfs diff=lfs merge=lfs -text
+*.uproject filter=lfs diff=lfs merge=lfs -text
 HTML5/** filter=lfs diff=lfs merge=lfs -text
