Added a potential solution and updated the web example

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,5 +4,5 @@ ProjectName=Third Person BP Game Template
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
-UsePakFile=False
+UsePakFile=True
 
